# TMU-interns-ai-voice-agent

./: .gitignore  app.md  app.py  budger_users.db  config.py  database.py  load_documents.md  load_documents.py  main.py  mkdocs.yml  models.py  overview.md  pyproject.toml  rag_system.py  requirements.txt  routes.py  setup.md  setup_db.py  structure.md  test_rag.py
docs/: app.md  index.md  load_documents.md  overview.md  setup.md  structure.md
enhanced_chroma_store/: chroma.sqlite3
logs/: app.log.2025-07-02  app.log.2025-07-03  app.log.2025-07-07
static/: chat.html  index.html  login.html  script.js  script1.js  style.css  style1.css
static/css/: style.css
